fixed issue with add class widget not showing

--- a/static/style.css
+++ b/static/style.css
@@ -296,6 +296,7 @@ h3{
 input[type = submit] {
   padding: 5px 15px;
   border: 0 none;
+  margin: 5px;
   font-family: 'Roboto Mono', monospace;
 }
 
@@ -475,33 +476,6 @@ input[type = submit] {
   margin-bottom: 25px;
 }
 
-.leftWidget.visible{
-  display: flex;
-  animation: slideinLeft 1000ms forwards;
-}
-
-.classWidget.visible{
-  background-color: #c2ffdd;
-  width: 300px;
-  border-radius: 15px;
-  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
-  padding: 20px;
-  transition: transform 0.3s ease-in-out;
-  flex: 1; /* Add flex: 1 */
-  margin-left: 30px; /* Add margin-left */
-  text-align: center;
-  margin-bottom: 30px;
-  display: block;
-  font-size: 15px;
-  animation: slideinRightClass 1000ms forwards;
-  font-size: 15px;
-}
-
-.bottomWidget.visible{
-  display: flex;
-  animation: slideinRight 1000ms forwards;
-}
-
 @keyframes slideinLeft {
     from {
         display: none;
@@ -527,6 +501,11 @@ input[type = submit] {
     transform: translateX(-200%);
 }
 
+.leftWidget.exists{
+    display: flex;
+    transform: translateX(0);
+}
+
 .leftWidget.visible{
     display: flex;
     animation: slideinLeft 1000ms forwards;
@@ -539,8 +518,9 @@ input[type = submit] {
 }
 
 .classWidget{
+
     background-color: #c2ffdd;
-    width: 600px;
+    width: 300px;
     border-radius: 15px;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
@@ -548,9 +528,9 @@ input[type = submit] {
     flex: 1; /* Add flex: 1 */
     margin-left: 30px; /* Add margin-left */
     text-align: center;
-    font-size: 25px;
     margin-bottom: 30px;
     display: block;
+    font-size: 15px;
 
 }
 
@@ -584,6 +564,38 @@ input[type = submit] {
 
 }
 
+.classWidget.visible{
+    background-color: #c2ffdd;
+    width: 300px;
+    border-radius: 15px;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    transition: transform 0.3s ease-in-out;
+    flex: 1; /* Add flex: 1 */
+    margin-left: 30px; /* Add margin-left */
+    text-align: center;
+    margin-bottom: 30px;
+    display: block;
+    font-size: 15px;
+    animation: slideinRightClass 1000ms forwards;
+    font-size: 15px;
+}
+
+.classWidget.full{
+    background-color: #c2ffdd;
+    width: 600px;
+    border-radius: 15px;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    transition: transform 0.3s ease-in-out;
+    flex: 1; /* Add flex: 1 */
+    margin-left: 30px; /* Add margin-left */
+    text-align: center;
+    font-size: 25px;
+    margin-bottom: 30px;
+    display: block;
+
+}
 
 @keyframes slideinRight {
     from {
@@ -607,6 +619,16 @@ input[type = submit] {
     padding: 20px;
     display: none;
     transform: translateX(200%);
+}
+
+.bottomWidget.exists{
+    display: flex;
+    transform: translateX(0);
+}
+
+.bottomWidget.visible{
+    display: flex;
+    animation: slideinRight 1000ms forwards;
 }
 
 
@@ -700,7 +722,7 @@ input[type = submit] {
   font-family: 'Roboto Mono', monospace;
   border-radius: 10px;
   border: none;
-  margin-bottom: 1%;
+  margin-bottom: 2%;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   cursor:text;
 }
@@ -711,7 +733,7 @@ input[type = submit] {
   border-radius: 10px;
   width: 77%;
   border: none;
-  margin-bottom: 1%;
+  margin-bottom: 2%;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   cursor:pointer;
 }
